few alignment fix

--- a/css/style.css
+++ b/css/style.css
@@ -1399,7 +1399,7 @@ ul.players li.item-player{
 /* Form Theme ---------------------------------------------------------*/
 
 .form-theme{
-	margin: 10px auto 30px auto;
+	margin: 10px auto 60px auto;
 }
 .form-theme input{
 	margin-bottom: 25px;
